# ats-research

./: .gitignore  00.CompanyResearchDiagram.mmd  01.MasterResumediagram.mmd  02.1.BestPracticesResearch.CoverLetter.mmd  02.2.BestPracticesResearch.Resume.mmd  03.TailoringOrchestra.mmd  04.JDMatchingOrchestra.mmd  05.DraftWritingOrchestra.mmd  05.JDMatchingOrchestra.mmd  06.1.WritingOrchestra.Resume.mmd  06.2.WritingOrchestra.CoverLetter.mmd  06.PolishingOrchestra.mmd  07.FactCheckerLoopOrchestra.mmd  07.PruningOrchestra.mmd  09.PruningOrchestra.mmd  IMPLEMENTATION_SUMMARY.md  MASTER_ORCHESTRATION_README.md  README.md  TASK.md  USAGE_EXAMPLES.md  pyproject.toml  requirements.txt  top20.md
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: ai-written-detector.md  change-executor.md  changes-ranker.md  delta-calculator.md  document-evaluator.md  document-fetcher.md  document-polisher.md  draft-humanizer.md  draft-writer.md  fact-checker.md  input-reader.md  issue-fixer.md  jd-parser.md  jds-ranker-selector.md  removal-evaluator.md  resume-jd-matcher.md  revised-draft-writer.md  rewriting-evaluator.md  tex-compiler.md  tex-template-filler.md  text-impact-calculator.md  version-manager.md
.claude/commands/: tailor.md
data/inputs/: resume.md
data/inputs/backend/: cover-letter-guidelines.md  cover-letter-top-patterns.md  cover_letter-merged.md  resume-guidelines.md  resume-top-patterns.md
data/inputs/data-eng/: cover-letter-guidelines.md  cover-letter-top-patterns.md  resume-guidelines.md  resume-top-patterns.md
data/inputs/sr-backend/: cover-letter-guidelines.md  (+3 more)
data/test/: sample_company_culture.md  sample_cover_letter_best_practices.md  sample_master_resume.md  sample_resume_best_practices.md
docs/: README.md  architecture.md  configuration.md  development.md  usage.md
src/: config.py  main.py  merger_main.py
src/agents/: __init__.py  agent_pool.py  base_agent.py
src/decisions/: decision_logic.py
src/human/: __init__.py  feedback.py  wizard.py
src/merger/: __init__.py  merger_engine.py  prompts.py  validators.py
src/orchestrators/: __init__.py  base_orchestra.py  cover_letter_writing_polishing_orchestra.py  fact_checking_loop_orchestra.py  input_preparation_orchestra.py  jd_matching_orchestra.py  pruning_orchestra.py  resume_writing_polishing_orchestra.py  tailoring_orchestra.py  writing_polishing_orchestra.py
src/state/: run_context.py  state_manager.py
src/utils/: logging.py
(+38 files in other folders)
